build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/dataprovider-testdox.phpt.warn
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Does'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'something'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'with'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'one'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Does'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'something'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'with'
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'two'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Does'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'something'
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	else
WARNING:18:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'one'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Does'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'something'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	else
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'two'
WARNING:20:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
